--- a/CSS_REACT/css/src/components/MyComponent/MyComponent.css
+++ b/CSS_REACT/css/src/components/MyComponent/MyComponent.css
@@ -2,3 +2,13 @@
     color: black;
     background-color: aqua;
 }
+
+.success {
+    background-color: green;
+    color: white;
+}
+
+.danger {
+    background-color: red;
+    color: white;
+}
