--- a/REQ_HTTP/httpreact/src/App.css
+++ b/REQ_HTTP/httpreact/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+body{
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.tableContainer{
+  width: 60%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.data-container{
+  display: flex;
+  flex-direction: row;
+}
+
+.form{
+  padding: 30px;
+  border-radius: 20px;
+  border: 1px solid #aaa;
+  display: flex;
+  flex-direction: column;
+  margin: 0 20px;
+  width: 40%;
+  gap: 10px;
 }
